tests/restrict-tenant-secret-stores/platform-author/user-info.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: platform-author
userInfo:
  username: system:serviceaccount:flux-system:kustomize-controller
  groups:
    - system:serviceaccounts
    - system:serviceaccounts:flux-system
    - system:authenticated
